# Roberto

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  skills.md
.github/workflows/: ci.yml
Books/: phaedrus-plato.md  republic-plato.md  symposium-plato.md
config/: entity_alias_overrides.yaml  following.txt  lenses.yaml  settings.yaml  taxonomy.yaml
data/exports/: book_book_20260304_071016Z.json  book_book_20260304_073531Z.json  book_book_20260305_075730Z.json  book_book_20260305_082422Z.json  book_book_20260305_084659Z.json  book_book_20260305_090121Z.json  book_book_20260305_091107Z.json  book_book_20260305_091432Z.json  book_book_20260305_092043Z.json
notes/_templates/: digest.md  story.md  user.md
prompts/v1/: cards.md  digest.md  manifest.json  user_summary.md
roadmap/: v1.md  v13.md  v14.md  v15.md  v16.md  v17.md  v18.md  v19.md  v2.md  v21.md  v22.md  v23.md  v24.md  v25.md  v26.md  v3.md  v4.md  v5.md  v6.md  v7.md
roberto_app/: __init__.py  cli.py  settings.py
roberto_app/llm/: __init__.py  cache.py  embeddings.py  gemini.py  probe.py  prompts.py  registry.py  retrieval.py  schemas.py  validation.py
tests/: test_book_mode.py  test_briefing.py  test_doctor.py  test_editorial.py  test_entity_graph.py  test_eval.py  test_gemini_probe.py  test_greene.py  test_human_memory.py  test_llm_usage.py  test_note_updater.py  test_pipeline_smoke.py  test_registry.py  test_reliability.py  test_retrieval.py  test_search_index.py  test_source_refs.py  test_story_surgery.py  test_uncertainty.py  test_validation.py  test_x_pagination.py
(+48 files in other folders)
